--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
+    "@tweenjs/tween.js": "^21.0.0",
     "lil-gui": "^0.18.2",
     "three": "^0.157.0"
   },
   "scripts": {
-    "start":"npx vite"
+    "start": "npx vite"
   }
 }
